remove ghost tracking toggle

--- a/KhTracker/MainWindow.xaml
+++ b/KhTracker/MainWindow.xaml
@@ -82,7 +82,7 @@
                 <MenuItem Header="Highlight Hinted World (Progression Hints)" Click="WorldHintHighlightToggle" x:Name="WorldHintHighlightOption"  IsCheckable="True" IsChecked="False"/>
                 <Separator/>
                 <MenuItem Header="Classic World Row Size (NEEDS RESTART)" Click="ClassicRowSizeToggle"	x:Name="ClassicRowSizeOption"  IsCheckable="True" IsChecked="False"/>
-                <MenuItem Header="Track Ghost Items" 	                  Click="GhostItemToggle"	    x:Name="GhostItemOption"	   IsCheckable="True" IsChecked="True"/>
+                <!--MenuItem Header="Track Ghost Items" 	                  Click="GhostItemToggle"	    x:Name="GhostItemOption"	   IsCheckable="True" IsChecked="True"/-->
                 <MenuItem Header="Ghost Item Auto-Math (Points Hints)"    Click="GhostMathToggle" 	    x:Name="GhostMathOption"	   IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Show Emblem Counter (Emblem Mode)"      Click="ShowEmblemCountToggle" x:Name="EmblemCountOption"	   IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Show Check Count (Points/Score Mode)"   Click="ShowCheckCountToggle"  x:Name="CheckCountOption"	   IsCheckable="True" IsChecked="False"/>
